app/static/input.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
    @apply flex flex-col min-h-screen;
}

header {
    @apply bg-black text-white sticky top-0;
}

main {
    @apply flex-1 text-white bg-gray-800;
}

footer {
    @apply bg-black;
}

a {
    @apply w-fit text-blue-500 hover:text-blue-600 hover:underline;
}

h1 {
    @apply md:text-4xl text-3xl font-bold;
}

h2 {
    @apply md:text-3xl text-2xl font-bold;
}

label {
    @apply my-2;
}

table {
    @apply w-full md:text-lg text-white bg-slate-800;
}

thead {
    @apply bg-slate-800;
}

tr {
    @apply hover:bg-slate-600 border border-slate-700;
}

td {
    @apply py-1 px-3;
}

#game-list td {
    @apply md:p-4 p-2;
}

#game-list .status {
    @apply p-1;
}

.btn {
    @apply rounded-md w-fit px-4 py-2 text-white hover:text-white bg-blue-600 hover:bg-blue-700 hover:no-underline;
}

.auth-container {
    @apply mx-auto md:max-w-4xl;
}

.auth-content {
    @apply p-6;
}

.header-items {
    @apply flex items-center justify-between p-5;
}

.header-brand {
    @apply flex items-center gap-2;
}

.header-auth {
    @apply text-white font-semibold;
}

.header-link {
    @apply text-white hover:text-white hover:no-underline;
}

.dropdown-container {
    @apply relative;
}

.dropdown-btn {
    @apply flex items-center gap-1 cursor-pointer;
}

.dropdown-img {
    @apply icon inline group-hover:opacity-50 group-focus:opacity-50;
}

.dropdown-caret {
    @apply inline-block text-xs group-hover:opacity-50 group-focus:opacity-50;
}

.dropdown-content {
    @apply hidden absolute border rounded-md z-[1] bg-white w-48 right-0;
}

.dropdown-content a {
    @apply p-2 text-black hover:no-underline hover:bg-gray-100 focus:bg-gray-100 w-full;
}

.dropdown-link {
    @apply flex items-center gap-1;
}

.show {
    @apply block;
}

.footer-items {
    @apply flex items-center justify-between gap-2 p-5;
}

.footer-attribution {
    @apply text-slate-500 text-sm;
}

.section-container {
    @apply md:max-w-3xl mx-auto;
}

nav + section .section-wrapper {
    @apply pt-4 pb-12 px-4;
}

.section-wrapper {
    @apply py-12 px-4;
}

.example-wrapper {
    @apply py-12 px-4 flex flex-col items-center;
}

.breadcrumb ul {
    @apply flex flex-wrap list-none font-semibold;
}

.breadcrumb li:not(:last-child)::after {
    @apply inline-block mx-1 content-['→'];
}

.icon {
    @apply h-6 min-w-[1.5rem];
}

.close {
    @apply float-right w-4 cursor-pointer text-gray-700 hover:text-black;
}

.cta-container {
    @apply py-12 px-4 flex md:flex-row flex-col-reverse md:gap-8 gap-4;
}

.cta-content {
    @apply flex flex-col md:text-left text-center md:items-start items-center;
}

.home-content {
    @apply flex flex-col items-center text-center;
}

.list-row {
    @apply border rounded-md mb-4 p-4 flex justify-between;
}

.list-edit {
    @apply text-sm text-blue-500 hover:text-blue-600 hover:underline cursor-pointer;
}

.form-select {
    @apply p-1 rounded-md md:text-base text-sm text-black;
}

.user-stats {
    @apply my-2;
}

.rounded-border {
    @apply border rounded-md;
}

.text-input {
    @apply px-3 py-2 bg-gray-700;
}

.message {
    @apply bg-slate-500 text-lg font-semibold text-center p-5;
}

.error {
    @apply bg-red-400 text-lg font-semibold text-center p-5;
}

.status.playing {
    @apply bg-green-400;
}

.status.finished {
    @apply bg-blue-400;
}

.status.on.hold {
    @apply bg-yellow-400;
}

.status.dropped {
    @apply bg-red-400;
}

.status.to.play {
    @apply bg-gray-400;
}

